--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
@@ -46,5 +47,4 @@
   "engines": {
     "node": ">=0.10.0"
   }
-
 }
