--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "bower install",
     "dev": "set NODE_ENV=development && nodemon ./bin/www",
     "prod": "set NODE_ENV=production && node ./bin/www"
   },
