--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "postinstall": "bower install",
     "dev": "set NODE_ENV=development && nodemon ./bin/www",
+    "debug": "set NODE_ENVd=development && node --debug ./bin/www",
     "prod": "set NODE_ENV=production && node ./bin/www"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "hjs": "~0.0.6",
     "hogan-express": "^0.5.2",
     "less-middleware": "1.0.x",
+    "merge": "^1.2.0",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3"
   },
