--- a/.jshintrc
+++ b/.jshintrc
@@ -11,10 +11,7 @@
     "latedef": true,
     "newcap": true,
     "noarg": true,
-    "quotmark": "single",
     "undef": true,
-    "unused": true,
-    "strict": true,
     "trailing": true,
     "smarttabs": true,
     "jquery": true,
@@ -24,3 +21,4 @@
         "notify"
     ]
 }
+//"unused": true
