--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-newer": "^0.7.0",
     "grunt-nodemon": "^0.3.0",
     "grunt-rev": "^0.1.0",
+    "grunt-shell": "^1.1.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.3.0",
     "grunt-wiredep": "^1.7.0",
