--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,10 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
     "modernizr": "~2.8.2",
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "crossroads": "~0.12.0",
+    "signals": "~1.0.0",
+    "knockout-require-templates": "~1.0.1",
+    "requirejs-text": "~2.0.12"
   }
 }
