--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-tasks": "^0.4.0",
+    "nodemon": "^1.2.1",
     "time-grunt": "^0.4.0"
   },
   "engines": {
