--- a/.jshintrc
+++ b/.jshintrc
@@ -15,6 +15,7 @@
     "trailing": true,
     "smarttabs": true,
     "jquery": true,
+    "jasmine": true,
     "predef": [ // Extra globals.
         "require",
         "define",
