getting socket.io to work

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "requirejs-text": "~2.0.12",
     "knockout.punches": "~0.5.0",
     "lodash": "~2.4.1",
-    "require-css": "~0.1.8"
+    "require-css": "~0.1.8",
+    "socket.io-client": "~1.2.1"
   }
 }
