--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hogan-express": "^0.5.2",
     "less-middleware": "1.0.x",
     "morgan": "~1.3.0",
+    "portscanner": "^1.0.0",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1"
   },
