--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "require-css": "~0.1.8",
     "socket.io-client": "~1.2.1",
     "knockout-x-editable": "~0.1.1",
-    "x-editable": "~1.5.1"
+    "x-editable": "~1.5.1",
+    "fontawesome": "~4.2.0"
   }
 }
