--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "body-parser": "~1.8.1",
+    "connect-nocache": "^1.1.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "grunt-contrib-jasmine": "^0.8.1",
+    "grunt-template-jasmine-requirejs": "^0.2.0",
     "hjs": "~0.0.6",
     "hogan-express": "^0.5.2",
     "less-middleware": "1.0.x",
