--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "socket.io-client": "~1.2.1",
     "knockout-x-editable": "~0.1.1",
     "x-editable": "~1.5.1",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "jasmine-ajax": "~2.99.0"
   }
 }
