--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "terminode",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "postinstall": "bower install",
-    "dev": "set NODE_ENV=development && nodemon ./bin/www",
-    "debug": "set NODE_ENV=development && node --debug ./bin/www",
-    "prod": "set NODE_ENV=production && node ./bin/www"
-  },
+    "scripts": {
+        "postinstall": "bower install",
+        "dev": "set NODE_ENV=development && nodemon ./bin/www",
+        "debug": "set NODE_ENV=development && node --debug ./bin/www",
+        "prod": "set NODE_ENV=production && node ./bin/www"
+    },
+  "main" : "./bin/www",
   "dependencies": {
     "body-parser": "~1.8.1",
     "connect-nocache": "^1.1.0",
