--- a/package.json
+++ b/package.json
@@ -1,60 +1,46 @@
 {
-  "name": "terminode",
-  "version": "0.0.0",
+    "name": "terminode",
+    "version": "0.0.0",
     "scripts": {
         "postinstall": "bower install",
         "dev": "set NODE_ENV=development && nodemon ./bin/www",
         "debug": "set NODE_ENV=development && node --debug ./bin/www",
         "prod": "set NODE_ENV=production && node ./bin/www"
     },
-  "main" : "./bin/www",
-  "dependencies": {
-    "body-parser": "~1.8.1",
-    "connect-nocache": "^1.1.0",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
-    "express": "~4.9.0",
-    "grunt-contrib-jasmine": "^0.8.1",
-    "grunt-template-jasmine-requirejs": "^0.2.0",
-    "hjs": "~0.0.6",
-    "hogan-express": "^0.5.2",
-    "less-middleware": "1.0.x",
-    "morgan": "~1.3.0",
-    "portscanner": "^1.0.0",
-    "serve-favicon": "~2.1.3",
-    "socket.io": "^1.2.1"
-  },
-  "devDependencies": {
-    "apache-server-configs": "^2.7.1",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.0",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.8.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha": "^0.4.10",
-    "grunt-modernizr": "^0.5.2",
-    "grunt-newer": "^0.7.0",
-    "grunt-nodemon": "^0.3.0",
-    "grunt-rev": "^0.1.0",
-    "grunt-shell": "^1.1.1",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.3.0",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.4.0",
-    "load-grunt-tasks": "^0.4.0",
-    "nodemon": "^1.2.1",
-    "time-grunt": "^0.4.0"
-  },
+    "main": "./bin/www",
+    "dependencies": {
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "debug": "~2.0.0",
+        "express": "~4.9.0",
+        "hjs": "~0.0.6",
+        "hogan-express": "^0.5.2",
+        "less-middleware": "1.0.x",
+        "morgan": "~1.3.0",
+        "portscanner": "^1.0.0",
+        "serve-favicon": "~2.1.3",
+        "socket.io": "^1.2.1"
+    },
+    "devDependencies": {
+        "grunt-contrib-jasmine": "^0.8.1",
+        "grunt-template-jasmine-requirejs": "^0.2.0",
+        "connect-nocache": "^1.1.0",
+        "grunt": "^0.4.5",
+        "grunt-autoprefixer": "^1.0.0",
+        "grunt-concurrent": "^0.5.0",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-connect": "^0.8.0",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-contrib-requirejs": "^0.4.4",
+        "grunt-contrib-sass": "^0.7.3",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-nodemon": "^0.3.0",
+        "grunt-rev": "^0.1.0",
+        "grunt-shell": "^1.1.1",
+        "jshint-stylish": "^0.4.0",
+        "load-grunt-tasks": "^0.4.0",
+        "nodemon": "^1.2.1"
+    },
   "engines": {
     "node": ">=0.10.0"
   }
