--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
         "debug": "set NODE_ENV=development && node --debug ./bin/www",
         "prod": "set NODE_ENV=production && node ./bin/www"
     },
+    "bin": {
+        "terminode": "./bin/run"
+    },
+    "repository": {
+        "type": "git",
+        "url":  "https://github.com/broline/terminode"
+    },
     "main": "./bin/www",
     "dependencies": {
         "body-parser": "~1.8.1",
@@ -19,7 +26,8 @@
         "morgan": "~1.3.0",
         "portscanner": "^1.0.0",
         "serve-favicon": "~2.1.3",
-        "socket.io": "^1.2.1"
+        "socket.io": "^1.2.1",
+        "open":  "0.0.5"
     },
     "devDependencies": {
         "grunt-contrib-jasmine": "^0.8.1",
@@ -39,7 +47,8 @@
         "grunt-shell": "^1.1.1",
         "jshint-stylish": "^0.4.0",
         "load-grunt-tasks": "^0.4.0",
-        "nodemon": "^1.2.1"
+        "nodemon": "^1.2.1",
+        "grunt-cli":  "^0.1.13"
     },
   "engines": {
     "node": ">=0.10.0"
