adding stubs and making testable for sockets and cookies

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "knockout-x-editable": "~0.1.1",
     "x-editable": "~1.5.1",
     "fontawesome": "~4.2.0",
-    "jasmine-ajax": "~2.99.0"
+    "jasmine-ajax": "~2.99.0",
+    "jquery.cookie": "~1.4.1"
   }
 }
